@@ -278,3 +278,4 @@ Issue #2019345 by johnv: Fixed 'force' parameter in call to hook_workflow.
 Issue #2019345 by johnv: Added some love to the Workflow Form: less space for schedule block.
 Issue #2019345 by johnv: Added some love to the Workflow Form.
 Issue #2019345 by johnv: Added some Node/Field API dependent flow logic.
+Issue #2137149 by johnv: Changed Workflow History Tab to show workflow_transition_form instead of workflow_node_form.
